--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-images">
+    <img class="top-cloud" src="cloud.png" alt="cloud-images">
     <h1> I'm Harsh</h1>
     <h2>a programmer<h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-images">
-      <img src="images/mountain.png" alt="mountain-image">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-images">
+      <img src="mountain.png" alt="mountain-image">
 </div>
 <div class="middle-container">
   <div class="profile">
